--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "MEAN",
   "version": "0.0.8",
   "dependencies": {
-    "express": "~4.8.8",
-    "morgan": "~1.3.0",
-    "compression": "~1.0.11",
     "body-parser": "~1.8.0",
-    "method-override": "~2.2.0",
-    "express-session": "~1.7.6",
-    "ejs": "~1.0.0",
+    "compression": "~1.0.11",
     "connect-flash": "~0.1.1",
+    "ejs": "~1.0.0",
+    "express": "~4.8.8",
+    "express-session": "~1.7.6",
+    "method-override": "~2.2.0",
     "mongoose": "~3.8.15",
+    "morgan": "~1.3.0",
     "passport": "~0.2.1",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "serve-favicon": "^2.2.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0"
   }
 }
